--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/fmfuad0/YouTube-clone#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.2"
+    "mongoose": "^8.14.2",
+    "multer": "^1.4.5-lts.2"
   },
   "keywords": [],
   "devDependencies": {
