--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "video.js": "^8.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
