--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -15,7 +15,7 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/inspectionProfiles/*
 .DS_Store
 *.suo
 *.ntvs*
